# toolchains_rpmbuild_prebuilt

./: .bazelrc  .gitattributes  BUILD.bazel  LICENSE  MODULE.bazel  README.md  bazel  bazel.bat  defs.bzl
.bcr/: metadata.template.json  presubmit.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_rpmbuild_aarch64.yml  build_rpmbuild_x86_64.yml  create_source_tarballs.yml  publish.yml  test_aarch64.yml  test_x86_64.yml
.github/workflows/build_rpmbuild/: Dockerfile  build.sh  environment  step-01_install_dependencies  step-02.01_download_zlib_source  step-02.02_download_bzip2_source  step-02.03_download_xz_source  step-02.04_download_zstd_source  step-02.05_download_openssl_source  step-02.06_download_sqlite_source  step-02.07_download_file_source  step-02.08_download_popt_source  step-02.09_download_lua_source  step-02.10_download_libarchive_source  step-02.11_download_rpm_source  step-03.01_build_zlib  step-03.02_build_bzip2  step-03.03_build_xz  step-03.04_build_zstd  step-03.05_build_openssl  step-03.06_build_sqlite  step-03.07_build_file  step-03.08_build_popt  step-03.09_build_lua  step-03.10_build_libarchive  step-04.1_collect_licenses  step-04_build_rpm  step-05_package  step-06_upload_release
.github/workflows/build_rpmbuild/patches/4.19/: relocatable-configdir.md  relocatable-configdir.patch  relocatable-sysconfdir.md  relocatable-sysconfdir.patch  static-linking.md  static-linking.patch
.github/workflows/build_rpmbuild/patches/4.20/: fix-compiler-flag-check.md  fix-compiler-flag-check.patch  no-buildsubdir.md  no-buildsubdir.patch  no-rm-builddir.md  no-rm-builddir.patch  relocatable-configdir.md  relocatable-configdir.patch  relocatable-sysconfdir.md  relocatable-sysconfdir.patch  static-linking.md  static-linking.patch
.github/workflows/build_rpmbuild/patches/6.0/: no-buildsubdir.md  no-buildsubdir.patch  no-rm-builddir.md  no-rm-builddir.patch  relocatable-configdir.md  relocatable-configdir.patch  relocatable-sysconfdir.md  relocatable-sysconfdir.patch  static-linking.md  static-linking.patch
.github/workflows/create_source_tarballs/: environment  step-1_install_dependencies  step-2_download_source  step-3_create_tarball  step-4_upload_release
.github/workflows/publish/: publish.sh
.github/workflows/test/: Dockerfile
.github/workflows/utils/: download_tarball  initialize_user  install_gh_cli
docs/runbooks/: RELEASE.md  adding-a-new-rpm-version.md
e2e/: .bazelrc  MODULE.bazel  validate_rpm.sh
examples/hello/: BUILD.bazel  hello.txt
private/: BUILD.bazel  BUILD.bazel.tpl  declare_toolchain.bzl  prebuilt_rpmbuild_toolchain.bzl  rpmbuild_repo.bzl
tests/rpm/: BUILD.bazel  validate_rpm.sh
tests/rpm_features/: BUILD.bazel  myapp.conf  myapp.sh  validate_rpm_features.sh
tests/rpm_metadata/: BUILD.bazel  validate_rpm_metadata.sh
tools/: BUILD.bazel  bazel  bazel.bat
