"Prebuilt, statically linked rpmbuild toolchain for rules_pkg pkg_rpm()"

module(name = "toolchains_rpmbuild_prebuilt")

# ==================
# || Dependencies ||
# ==================
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "platforms", version = "1.0.0")

# ======================
# || Dev Dependencies ||
# ======================
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1", dev_dependency = True)

# ================
# || Toolchains ||
# ================
prebuilt_rpmbuild_toolchain = use_repo_rule("//:defs.bzl", "prebuilt_rpmbuild_toolchain")
prebuilt_rpmbuild_toolchain(name = "rpmbuild", dev_dependency = True)
register_toolchains("@rpmbuild", dev_dependency = True)
